--- a/Nonlexical_extraction.ipynb
+++ b/Nonlexical_extraction.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup, Tag"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getParagraphLength(data):\n",
+    "    soup = BeautifulSoup(data['answer_body'])\n",
+    "    for tag in soup.find_all('code'):\n",
+    "        tag.replaceWith('')\n",
+    "\n",
+    "    return len(soup.get_text())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -46,10 +61,11 @@
        "      <th></th>\n",
        "      <th>question_id</th>\n",
        "      <th>answer_id</th>\n",
-       "      <th>answer_count</th>\n",
+       "      <th>a_score_rel_q_score</th>\n",
        "      <th>answer_score</th>\n",
        "      <th>reputation</th>\n",
        "      <th>reply_by_author</th>\n",
+       "      <th>len_answer_text</th>\n",
        "      <th>is_accepted</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -58,50 +74,55 @@
        "      <th>0</th>\n",
        "      <td>22528</td>\n",
        "      <td>22594</td>\n",
-       "      <td>6</td>\n",
+       "      <td>-6</td>\n",
        "      <td>5</td>\n",
        "      <td>17497.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>628</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>22528</td>\n",
        "      <td>22587</td>\n",
-       "      <td>6</td>\n",
+       "      <td>2</td>\n",
        "      <td>13</td>\n",
        "      <td>17787.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>699</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>22528</td>\n",
        "      <td>22578</td>\n",
-       "      <td>6</td>\n",
+       "      <td>-11</td>\n",
        "      <td>0</td>\n",
        "      <td>21216.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>338</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>22528</td>\n",
        "      <td>22551</td>\n",
-       "      <td>6</td>\n",
+       "      <td>-10</td>\n",
        "      <td>1</td>\n",
        "      <td>480242.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>422</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>22528</td>\n",
        "      <td>22537</td>\n",
-       "      <td>6</td>\n",
+       "      <td>-11</td>\n",
        "      <td>0</td>\n",
        "      <td>10583.0</td>\n",
        "      <td>False</td>\n",
+       "      <td>318</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -109,22 +130,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   question_id  answer_id  answer_count  answer_score  reputation  \\\n",
-       "0        22528      22594             6             5     17497.0   \n",
-       "1        22528      22587             6            13     17787.0   \n",
-       "2        22528      22578             6             0     21216.0   \n",
-       "3        22528      22551             6             1    480242.0   \n",
-       "4        22528      22537             6             0     10583.0   \n",
+       "   question_id  answer_id  a_score_rel_q_score  answer_score  reputation  \\\n",
+       "0        22528      22594                   -6             5     17497.0   \n",
+       "1        22528      22587                    2            13     17787.0   \n",
+       "2        22528      22578                  -11             0     21216.0   \n",
+       "3        22528      22551                  -10             1    480242.0   \n",
+       "4        22528      22537                  -11             0     10583.0   \n",
        "\n",
-       "   reply_by_author  is_accepted  \n",
-       "0            False        False  \n",
-       "1            False         True  \n",
-       "2            False        False  \n",
-       "3            False        False  \n",
-       "4            False        False  "
+       "   reply_by_author  len_answer_text  is_accepted  \n",
+       "0            False              628        False  \n",
+       "1            False              699         True  \n",
+       "2            False              338        False  \n",
+       "3            False              422        False  \n",
+       "4            False              318        False  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,15 +154,21 @@
     "df['reply_by_author'] = df.apply(lambda x: True if x['answer_user_id'] == \\\n",
     "                                         x['question_user_id'] else False, axis = 1)\n",
     "\n",
-    "df = df[['question_id', 'answer_id', 'answer_count', 'answer_score', \\\n",
-    "           'reputation', 'reply_by_author', 'is_accepted']]\n",
-    "#df.loc[df['reply_by_author']]\n",
+    "df['a_score_rel_q_score'] = df.apply(lambda x: x['answer_score'] - x['question_score'], \\\n",
+    "                                     axis = 1)\n",
+    "\n",
+    "df['len_answer_text'] = df.apply(lambda x: getParagraphLength(x), \\\n",
+    "                                     axis = 1)\n",
+    "\n",
+    "df = df[['question_id', 'answer_id', 'a_score_rel_q_score', 'answer_score', \\\n",
+    "           'reputation', 'reply_by_author', 'len_answer_text', 'is_accepted']]\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
