--- a/Feature_Extraction.ipynb
+++ b/Feature_Extraction.ipynb
@@ -788,6 +788,403 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question_id</th>\n",
+       "      <th>answer_id</th>\n",
+       "      <th>a_score_rel_q_score</th>\n",
+       "      <th>answer_score</th>\n",
+       "      <th>entities_matches</th>\n",
+       "      <th>reputation</th>\n",
+       "      <th>reply_by_author</th>\n",
+       "      <th>len_answer_text</th>\n",
+       "      <th>is_accepted</th>\n",
+       "      <th>code_snippet_count</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Subjectivity</th>\n",
+       "      <th>Bare.Command</th>\n",
+       "      <th>WH.Questions</th>\n",
+       "      <th>YesNo.Questions</th>\n",
+       "      <th>Gratitude</th>\n",
+       "      <th>Apology</th>\n",
+       "      <th>Truth.Intensifier</th>\n",
+       "      <th>Affirmation</th>\n",
+       "      <th>Adverb.Just</th>\n",
+       "      <th>Conjunction.Start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22528</td>\n",
+       "      <td>22594</td>\n",
+       "      <td>-6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17497.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>628</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22528</td>\n",
+       "      <td>22587</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17787.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>699</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22528</td>\n",
+       "      <td>22578</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21216.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>338</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>22528</td>\n",
+       "      <td>22551</td>\n",
+       "      <td>-10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>480242.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>422</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>22528</td>\n",
+       "      <td>22537</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10583.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>318</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10482</th>\n",
+       "      <td>421797</td>\n",
+       "      <td>421810</td>\n",
+       "      <td>-249</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70357.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>273</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10483</th>\n",
+       "      <td>421801</td>\n",
+       "      <td>421862</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>109933.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>950</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10484</th>\n",
+       "      <td>421801</td>\n",
+       "      <td>421838</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1255831.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>334</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10485</th>\n",
+       "      <td>421833</td>\n",
+       "      <td>421884</td>\n",
+       "      <td>-4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58064.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>344</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10486</th>\n",
+       "      <td>421833</td>\n",
+       "      <td>421844</td>\n",
+       "      <td>-11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>389034.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>152</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10487 rows × 48 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       question_id  answer_id  a_score_rel_q_score  answer_score  \\\n",
+       "0            22528      22594                   -6             5   \n",
+       "1            22528      22587                    2            13   \n",
+       "2            22528      22578                  -11             0   \n",
+       "3            22528      22551                  -10             1   \n",
+       "4            22528      22537                  -11             0   \n",
+       "...            ...        ...                  ...           ...   \n",
+       "10482       421797     421810                 -249            20   \n",
+       "10483       421801     421862                    0             2   \n",
+       "10484       421801     421838                   -1             1   \n",
+       "10485       421833     421884                   -4             8   \n",
+       "10486       421833     421844                  -11             1   \n",
+       "\n",
+       "       entities_matches  reputation  reply_by_author  len_answer_text  \\\n",
+       "0                     1     17497.0            False              628   \n",
+       "1                     0     17787.0            False              699   \n",
+       "2                     1     21216.0            False              338   \n",
+       "3                     2    480242.0            False              422   \n",
+       "4                     0     10583.0            False              318   \n",
+       "...                 ...         ...              ...              ...   \n",
+       "10482                 0     70357.0            False              273   \n",
+       "10483                 1    109933.0            False              950   \n",
+       "10484                 1   1255831.0            False              334   \n",
+       "10485                 0     58064.0            False              344   \n",
+       "10486                 0    389034.0            False              152   \n",
+       "\n",
+       "       is_accepted  code_snippet_count  ...  Subjectivity  Bare.Command  \\\n",
+       "0            False                   0  ...             0             0   \n",
+       "1             True                   0  ...             0             0   \n",
+       "2            False                   1  ...             0             2   \n",
+       "3            False                   0  ...             0             0   \n",
+       "4            False                   0  ...             0             1   \n",
+       "...            ...                 ...  ...           ...           ...   \n",
+       "10482        False                   0  ...             1             0   \n",
+       "10483         True                   0  ...             2             0   \n",
+       "10484        False                   0  ...             1             0   \n",
+       "10485         True                   1  ...             0             0   \n",
+       "10486        False                   0  ...             0             0   \n",
+       "\n",
+       "       WH.Questions  YesNo.Questions  Gratitude  Apology  Truth.Intensifier  \\\n",
+       "0                 0                0          0        0                  0   \n",
+       "1                 0                0          0        0                  1   \n",
+       "2                 0                0          0        0                  0   \n",
+       "3                 0                0          0        0                  0   \n",
+       "4                 1                1          0        0                  0   \n",
+       "...             ...              ...        ...      ...                ...   \n",
+       "10482             0                0          0        0                  1   \n",
+       "10483             0                1          0        0                  3   \n",
+       "10484             0                0          0        0                  0   \n",
+       "10485             0                0          0        0                  0   \n",
+       "10486             0                0          0        0                  0   \n",
+       "\n",
+       "       Affirmation  Adverb.Just  Conjunction.Start  \n",
+       "0                0            0                  0  \n",
+       "1                0            0                  1  \n",
+       "2                0            1                  0  \n",
+       "3                0            0                  0  \n",
+       "4                0            0                  0  \n",
+       "...            ...          ...                ...  \n",
+       "10482            0            0                  0  \n",
+       "10483            0            0                  2  \n",
+       "10484            0            0                  0  \n",
+       "10485            0            0                  1  \n",
+       "10486            1            0                  0  \n",
+       "\n",
+       "[10487 rows x 48 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(data, df, how='inner', on='answer_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
