--- a/lin_reg.ipynb
+++ b/lin_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,6 +470,16 @@
     "#b_data[\"rank\"] = b_data.groupby(\"question_id\")[\"answer_score\"].rank(ascending=False)\n",
     "print(max(b_data['answer_score']))\n",
     "b_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_answers = pred_df['question_id'].value_counts.to_dict()\n",
+    "pred_df['rand_rank'] = pred_df.['question_id'].apply(lambda x: random.randint(1, num_answers[x] + 1)) "
    ]
   },
   {
