--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -1151,37 +1151,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "random.seed(0)\n",
-    "\n",
-    "num_answers = pred_df['question_id'].value_counts()\n",
-    "pred_df['rand_rank'] = pred_df['question_id'].apply(lambda x: random.randint(1, num_answers[x])) \n",
-    "\n",
-    "rand_rank = pred_df[pred_df['rand_rank'] == 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3170028818443804"
+       "0.30778097982708935"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(answer_rank.merge(rand_rank, how='inner', on='answer_id')) / len(pred_df['question_id'].unique())"
+    "prop = 0\n",
+    "for i in range(5):\n",
+    "    random.seed(i)\n",
+    "    num_answers = pred_df['question_id'].value_counts()\n",
+    "    pred_df['rand_rank'] = pred_df['question_id'].apply(lambda x: random.randint(1, num_answers[x])) \n",
+    "\n",
+    "    rand_rank = pred_df[pred_df['rand_rank'] == 1]\n",
+    "    prop += len(answer_rank.merge(rand_rank, how='inner', on='answer_id')) / len(pred_df['question_id'].unique())\n",
+    "    \n",
+    "prop /= 5\n",
+    "prop\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.33429394812680113"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
