--- a/Models.ipynb
+++ b/Models.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from scipy import stats\n",
     "from sklearn.inspection import permutation_importance\n",
-    "from sklearn.model_selection import GroupShuffleSplit"
+    "from sklearn.model_selection import GroupShuffleSplit\n",
+    "from sklearn.metrics import average_precision_score"
    ]
   },
   {
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "[5 rows x 48 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,11 +295,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is answer_score?\n",
     "\n",
     "features = ['a_score_rel_q_score', 'answer_score',\n",
     "       'entities_matches', 'reputation', 'reply_by_author', 'len_answer_text', 'code_snippet_count', 'link_count', 'Hedges',\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "[10162 rows x 48 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "RandomForestClassifier(n_estimators=1000, random_state=0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
        "216        2.5  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -1191,7 +1191,7 @@
        "SpearmanrResult(correlation=0.9423676818704739, pvalue=0.0)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
        "0.7492795389048992"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1265,13 +1265,247 @@
        "0.8530259365994236"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(answer_rank.merge(pred_rank_top3, how='inner', on='answer_id')) / len(pred_df['question_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>question_id</th>\n",
+       "      <th>answer_id</th>\n",
+       "      <th>answer_score</th>\n",
+       "      <th>pred_answer_score</th>\n",
+       "      <th>answer_rank</th>\n",
+       "      <th>pred_rank</th>\n",
+       "      <th>top_3</th>\n",
+       "      <th>actual</th>\n",
+       "      <th>pred</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>835</td>\n",
+       "      <td>1023</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>796</th>\n",
+       "      <td>835</td>\n",
+       "      <td>1281</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>835</td>\n",
+       "      <td>2343524</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>802</th>\n",
+       "      <td>845</td>\n",
+       "      <td>849</td>\n",
+       "      <td>77</td>\n",
+       "      <td>13</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>806</th>\n",
+       "      <td>845</td>\n",
+       "      <td>6083463</td>\n",
+       "      <td>35</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1051</th>\n",
+       "      <td>61729790</td>\n",
+       "      <td>67237249</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2057</th>\n",
+       "      <td>66039501</td>\n",
+       "      <td>66046204</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2056</th>\n",
+       "      <td>66039501</td>\n",
+       "      <td>67237310</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1468</th>\n",
+       "      <td>67142905</td>\n",
+       "      <td>67144851</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1276</th>\n",
+       "      <td>67234961</td>\n",
+       "      <td>67236964</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2040 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      question_id  answer_id  answer_score  pred_answer_score  answer_rank  \\\n",
+       "798           835       1023             6                  6          1.0   \n",
+       "796           835       1281             5                  5          2.0   \n",
+       "797           835    2343524             2                  2          3.0   \n",
+       "802           845        849            77                 13          1.0   \n",
+       "806           845    6083463            35                 16          2.0   \n",
+       "...           ...        ...           ...                ...          ...   \n",
+       "1051     61729790   67237249             0                  0          2.0   \n",
+       "2057     66039501   66046204             4                  4          1.0   \n",
+       "2056     66039501   67237310             0                  0          2.0   \n",
+       "1468     67142905   67144851             0                  0          1.0   \n",
+       "1276     67234961   67236964             0                  0          1.0   \n",
+       "\n",
+       "      pred_rank  top_3  actual  pred  \n",
+       "798         1.0      1       1     1  \n",
+       "796         2.0      1       1     1  \n",
+       "797         3.0      1       1     1  \n",
+       "802         2.0      1       1     1  \n",
+       "806         1.0      1       1     1  \n",
+       "...         ...    ...     ...   ...  \n",
+       "1051        2.0      1       1     1  \n",
+       "2057        1.0      1       1     1  \n",
+       "2056        2.0      1       1     1  \n",
+       "1468        1.0      1       1     1  \n",
+       "1276        1.0      1       1     1  \n",
+       "\n",
+       "[2040 rows x 9 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9154640941792325"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pred_MAP = pred_df.sort_values(by=['question_id','answer_rank'])\n",
+    "pred_MAP['actual'] = pred_MAP.apply(lambda x: 1 if x['answer_rank'] <= 3 else 0, axis = 1)\n",
+    "pred_MAP['pred'] = pred_MAP.apply(lambda x: 1 if x['pred_rank'] <= 3 else 0, axis = 1)\n",
+    "display(pred_MAP)\n",
+    "average_precision_score(pred_MAP['actual'], pred_MAP['pred'])"
    ]
   }
  ],
